Fixed in-game settings to be visible again.

--- a/client/src/app/in-game-settings/in-game-settings.component.scss
+++ b/client/src/app/in-game-settings/in-game-settings.component.scss
@@ -18,6 +18,7 @@ div {
         height: calc(90vh - 60px);
         padding: 30px;
         overflow-y: auto;
+        color: black;
 
 
         .row {
